package es.uniovi.dlp.ast.program;

import es.uniovi.dlp.ast.type.Type;

public class Definition {
    private Type type;
}
