package es.uniovi.dlp.ast.program;

import es.uniovi.dlp.ast.statement.Statement;

public class FunctionDefinition {
    private Statement statements;
    private VarDefinition varDefinitions;
    private String name;

}
