package es.uniovi.dlp.ast.program;

import es.uniovi.dlp.ast.AbstractASTNode;

public class Program extends AbstractASTNode {
    public Program(int line, int column) {
        super(line, column);
    }
}
