package es.uniovi.dlp.ast.program;

public class VarDefinition {
    private String name;
}
