@startuml Program
skinparam style strictuml
skinparam monochrome true


interface ASTNode {
    getLine(): int
    getColumn(): int
}

class Program

interface Definition{
type: Type
}
class FunctionDefinition{
    name: String
    varDefinitions: VarDefinition
    statements: Statement
}
class VarDefinition{
name:String
}

ASTNode <|.. Program
ASTNode <|.. Definition
Definition <|.. VarDefinition
Definition <|.. FunctionDefinition
Program o-- "0..n" Definition

@enduml
